--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 1%;
-  background-color: #FAF9F5
+  background-color: #F0EFE7
 }
 
 p {
@@ -9,15 +9,15 @@ p {
 }
 
 h1 {
-  background-color: yellow;
+  background-color: #FAF9F5;
 }
 
 h2 {
-  background-color: green;
+  background-color: #FAF9F5;
 }
 
 h3 {
-  background-color: red;
+  background-color: #FAF9F5;
 }
 
 .strava-badge- {
