--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 1%;
+  background-color: #FDF6E3
 }
 
 p {
@@ -8,15 +9,15 @@ p {
 }
 
 h1 {
-  background-color: yellow;
+  background-color: #EAE0C0;
 }
 
 h2 {
-  background-color: green;
+  background-color: #EAE0C0;
 }
 
 h3 {
-  background-color: red;
+  background-color: #EAE0C0;
 }
 
 .strava-badge- {
@@ -43,4 +44,25 @@ footer {
   display: block;
   border-style: inherit;
   color: antiquewhite;
+}
+.styled-table {
+    border-collapse: collapse;
+    width: 60%;
+    margin: 20px 0;
+    font-size: 1em;
+    font-family: Arial, sans-serif;
+    min-width: 300px;
+    box-shadow: 0 0 10px #ccc;
+}
+.styled-table th, .styled-table td {
+    border: 1px solid #ddd;
+    padding: 8px 12px;
+    text-align: left;
+}
+.styled-table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+.styled-table tr:nth-child(even) {
+    background-color: #fafafa;
 }
