style: Change body alignment from `justify-content: center` to `text-align: justify`.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   background-color: #FDF6E3;
   font-family: monospace;
   font-size: larger;
-  justify-content: center;
+  text-align: justify;
 }
 
 p {
